# starnavi-test

./: .gitignore  LICENSE  README.md  pyproject.toml
api/: urls.py
api/comments/api/: __init__.py  analytics.py  comment.py
api/comments/migrations/: 0001_initial.py  0002_initial.py  0002_rename_user_comment_author.py  0003_rename_answer_to_comment_parent.py
api/comments/models/: __init__.py  comment.py  manager.py
api/comments/repositories/: __init__.py  comment_base.py  comment_repository.py
api/comments/schemas/: __init__.py  comment_create_schema.py  comment_daily_schema.py  comment_response_schema.py
api/comments/services/: __init__.py  analytics_service.py
api/posts/api/: __init__.py  post.py
api/posts/factories/: __init__.py  post_factory.py
api/posts/migrations/: 0001_initial.py
api/posts/models/: __init__.py  manager.py  post.py
api/posts/repositories/: post_base.py  post_repository.py
api/posts/schemas/: __init__.py  post_create_schema.py  post_list_schema.py  post_response_schema.py
api/services/: __init__.py  profanity_service.py  user_service.py
api/users/api/: __init__.py  auth.py  registration.py
api/users/factories/: __init__.py  user_factory.py
api/users/migrations/: 0001_initial.py
api/users/models/: __init__.py  manager.py  user.py
api/users/repositories/: __init__.py  user_base.py  user_repository.py
api/users/schemas/: __init__.py  auth_schema.py  token_schema.py  user_create_schema.py  user_responce_schema.py
api/users/services/: auth_service.py
config/: settings.py  urls.py
(+16 files in other folders)
